# RomanC

./: CMakeLists.txt
include/Roman/: Decode.h
src/: CMakeLists.txt
src/Roman/: Decode.c
tests/: CMakeLists.txt  CMakeLists.txt   RunAllTests.cpp
tests/Roman/: DecodeTest.cpp
